--- a/src/PlayerGuessInput.css
+++ b/src/PlayerGuessInput.css
@@ -2,6 +2,30 @@
     position: relative;
     margin-bottom: 20px;
   }
+
+    /*Surface Duo Modification*/
+    @media (width: 375px) {
+      .input-container {
+        position: relative;
+        margin-bottom: -10px;
+      }
+    }
+
+      /*title*/
+      @media (width: 375px) {
+        .input-container {
+          position: relative;
+          margin-bottom: -10px;
+        }
+      }
+
+  /*Surface Duo Modification*/
+  @media (width: 540px) {
+    .input-container {
+      position: relative;
+      margin-bottom: -10px;
+    }
+  }
   
   .player-input {
     width: 100%;
@@ -13,21 +37,23 @@
     box-sizing: border-box;
   }
   
+
   .suggestions {
     list-style-type: none;
     padding: 0;
-    margin: 0;
+    margin: 0; /* Remove margins */
+    width: 100%; /* Ensure suggestions take full width */
     max-width: 300px;
     border: 1px solid #ddd;
     border-radius: 5px;
     max-height: 160px;
     overflow-y: auto;
-    background-color: white;
-    position: absolute;
-    top: 100%; /* Position suggestions below the input */
-    left: 0;
-    width: 100%;
+    background-color: white; /* White background for suggestions */
+    box-sizing: border-box;
     z-index: 10; /* Ensure it appears above other content */
+    position: absolute; /* Position suggestions absolutely */
+    top: 100%; /* Place suggestions directly below the input */
+    left: 0; /* Align suggestions with the input field */
   }
   
   .suggestion-item {
